# rl_local_planner

./: README.md
msg/servingbot_msgs/: CMakeLists.txt  package.xml
msg/servingbot_msgs/msg/: SensorState.msg
navigation/: CMakeLists.txt  README.md  package.xml
navigation/launch/Simulation/: dwa_servingbot_navigation.launch  hybrid_syscon_navigation.launch  hybrid_syscon_navigation_testworld.launch  multi-servingbot_rl.launch  multi-servingbot_rl_lookahead_1.launch  multi-servingbot_rl_lookahead_2.launch  multi-servingbot_rl_waypoint.launch  multi-sysconbot_rl_lookahead_2.launch  multi-sysconbot_rl_lookahead_4.launch  servingbot_rl.launch  servingbot_rl_dwa.launch  servingbot_rl_lookahead.launch  servingbot_rl_lookahead_lsq.launch  servingbot_rl_teb.launch  servingbot_rl_waitpoint.launch  single-servingbot_rl.launch  sysconbot_lookahead_generator.launch  sysconbot_rl.launch  sysconbot_rl_lookahead.launch  sysconbot_rl_lookahead_2.launch  sysconbot_rl_lookahead_testworld.launch  test_robot_0.launch  test_servingbot_rl.launch
navigation/launch/Simulation/params/: 2amcl_params.yaml  3amcl_params.yaml  amcl_params.yaml  lookahead.yaml  m_amcl_params.yaml  rviz_multi_2agent.rviz  rviz_multi_4agent.rviz  rviz_multi_navi.rviz  rviz_rl_navigation.rviz  rviz_single_rl_navigation.rviz  syscon_lookahead.yaml
navigation/launch/Simulation/params/carlike/: 2costmap_common_params.yaml  2costmap_common_params_local.yaml  2global_costmap_params.yaml  2local_costmap_params.yaml  costmap_common_params.yaml  costmap_common_params_obstacle_on.yaml  dwa_costmap_common_params.yaml  dwa_global_costmap_params.yaml  dwa_local_costmap_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params (copy).yaml  teb_local_planner_params.yaml
navigation/launch/Simulation/params/sr7c_ls_param/: costmap_common_params.yaml  costmap_param_LSpart1.yaml  dwa_costmap_common_params.yaml  dwa_global_costmap_params.yaml  dwa_local_costmap_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  sp3_local_planner_params.yaml  teb_costmap_common_params.yaml  teb_global_costmap_params.yaml  teb_local_costmap_params.yaml  teb_local_planner_params.yaml
navigation/map/: lsq_map_2.pgm  lsq_map_2.yaml  lsq_map_data.pgm  lsq_map_data.yaml  lsq_map_w2.pgm  lsq_map_w2.yaml  lsq_map_w3.pgm  lsq_map_w3.yaml  ractangle_10_map.pgm  ractangle_10_map.yaml  ractangle_map.pgm  ractangle_map.yaml  rl_map.yaml  simul_map.yaml  sq_map_data.pgm  sq_map_data.yaml  testworld_2_map.pgm  testworld_2_map.yaml
navigation/script/: clear_costmap.py  hybrid_cmd_vel_swich.py  loss_data.txt  reallidar.txt  reset_pose.py  switch_goal.py  switching_alg.py  vlidar.txt
navigation/script/Untitled Folder/: Link to Untitled Folder  amcl_pose.txt  lidar_data.txt  local_data.txt  rot_data.txt  rot_data_2.txt
navigation/script/goal_pub/: goal_pub.py  goal_pub_config.py
navigation/script/no_obstacle/: loss_data.txt  reallidar.txt  threshold_loss_data.txt  vlidar.txt
navigation/script/obstacle/: loss_data.txt  reallidar.txt  threshold_loss_data.txt  vlidar.txt
navigation/src/: lookahead_point.cpp  lookahead_point3.cpp  lookahead_point_global_plan.cpp  lookahead_point_origin.cpp
navigation/worlds/: gazebo_train_world.world  gazebo_train_world2.world  human_walk.world  ract_world.world  ractangle_10_world.world  rl_world.world  temp_world.world  testworld_2.world
robot_model/servingbot/serving_simuation/servingbot_fake/: CMakeLists.txt  package.xml
robot_model/servingbot/serving_simuation/servingbot_fake/launch/: servingbot_fake.launch
robot_model/servingbot/serving_simuation/servingbot_fake/src/: servingbot_fake.cpp
robot_model/servingbot/serving_simuation/servingbot_gazebo/: CMakeLists.txt  package.xml
robot_model/servingbot/serving_simuation/servingbot_gazebo/launch/: multi-servingbot_rl_world.launch  scan_merged_sr7e_rl_rac.launch  servingbot_rl_lsq_dynamic_2_world.launch  servingbot_rl_lsq_dynamic_3_world.launch  servingbot_rl_lsq_dynamic_4_world.launch  servingbot_rl_lsq_static_2_world.launch  servingbot_rl_lsq_static_2w_world.launch  servingbot_rl_lsq_static_3_world.launch  servingbot_rl_lsq_static_3w_world.launch  servingbot_rl_lsq_static_world.launch  servingbot_rl_lsq_world.launch  servingbot_rl_rac.launch  servingbot_rl_sq_world.launch  servingbot_rl_test.launch  servingbot_rl_world.launch  servingbot_sq_world.launch  (+1 more)
robot_model/servingbot/servingbot_bringup/: CMakeLists.txt  package.xml
robot_model/servingbot/servingbot_bringup/launch/: servingbot_core.launch  servingbot_lidar.launch  servingbot_lidar_sick561.launch  servingbot_model.launch  servingbot_remote.launch  servingbot_robot _navi.launch  servingbot_sick_robot.launch
robot_model/servingbot/servingbot_bringup/scripts/: create_udev_rules
robot_model/servingbot/servingbot_bringup/src/: servingbot_diagnostics.cpp
robot_model/servingbot/servingbot_description/: CMakeLists.txt  model.rviz  package.xml
robot_model/servingbot/servingbot_description/config/: joint_names_servingbot.yaml
robot_model/servingbot/servingbot_description/launch/: display.launch  gazebo.launch
robot_model/servingbot/servingbot_description/rviz/: model.rviz
robot_model/servingbot/servingbot_description/urdf/: rl_servingbot.gazebo.xacro  rl_servingbot.urdf.xacro  servingbot.gazebo.xacro  servingbot.urdf  servingbot.urdf (another copy).xacro  servingbot3.gazebo.xacro  servingbot3.urdf.xacro  servingbot_rl.gazebo.xacro  servingbot_rl.urdf.xacro  servingbot_rl2.gazebo.xacro  servingbot_rl2.urdf.xacro
robot_model/sr5/sp_bringup/: CMakeLists.txt  package.xml
robot_model/sr5/sp_bringup/launch/: NAV.launch  SLAM.launch  bridge.launch  roboOn.launch  teleop.launch  upstart.launch
robot_model/sr5/sp_description/: CMakeLists.txt  package.xml
robot_model/sr5/sp_description/launch/: model_view.launch
robot_model/sr5/sp_description/rviz/: sr7e.rviz
robot_model/sr5/sp_description/urdf/: common_properties.xacro  common_properties_low_mass.xacro
(+185 files in other folders)
