<?xml version="1.0"?>
<package>
  <name>servingbot_fake</name>
  <version>0.1.0</version>
  <description>
    Package for Zetabank fake node. With this package, simple tests can be done without a robot.
    You can do simple tests using this package on rviz without real robots.
  </description>
  <license>Apache License 2.0</license>
  <author email="wodhks7968@gmail.com">Wan</author>
  <maintainer email="wodhks7968@gmail.com">Wan</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>servingbot_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>servingbot_msgs</run_depend>
</package>
